firefox socket fix

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
       }
     ],
     "dependencies": {
-      "formidable": "*"
+      "formidable": "*",
+      "socket.io-client": "*"
     },
     "devDependencies": {
       "request": "*"
