--- a/package.json
+++ b/package.json
@@ -1,30 +1,39 @@
 {
-    "description": "Adds option to create votings on parts of text",
-    "name": "ep_inline_voting",
-    "version": "0.0.1",
-    "author": {
+  "description": "Adds option to create votings on parts of text",
+  "name": "ep_inline_voting",
+  "version": "0.0.1",
+  "author": {
+    "name": "Ilmar Türk",
+    "email": "ilmar@citizenos.com"
+  },
+  "contributors": [
+    {
       "name": "Ilmar Türk",
       "email": "ilmar@citizenos.com"
-    },
-    "contributors": [
-      {
-        "name": "Ilmar Türk",
-        "email": "ilmar@citizenos.com"
-      }
-    ],
-    "dependencies": {
-      "formidable": "*",
-      "socket.io-client": "*"
-    },
-    "devDependencies": {
-      "request": "*"
-    },
-    "engines": {
-      "node": "*"
-    },
-    "repository": {
-      "type": "git",
-      "url": "https://github.com/citizenos/ep_inline_voting"
     }
+  ],
+  "dependencies": {
+    "formidable": "*",
+    "socket.io-client": "*"
+  },
+  "devDependencies": {
+    "eslint": "^7.14.0",
+    "eslint-config-etherpad": "^1.0.15",
+    "eslint-plugin-mocha": "^8.0.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prefer-arrow": "^1.2.2",
+    "eslint-plugin-promise": "^4.2.1",
+    "request": "*"
+  },
+  "eslintConfig": {
+    "root": true,
+    "extends": "etherpad/plugin"
+  },
+  "engines": {
+    "node": ">8.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/citizenos/ep_inline_voting"
   }
-  
+}
